--- a/Client/src/app/app.html
+++ b/Client/src/app/app.html
@@ -1,10 +1,6 @@
 <app-header></app-header>
 
 <div class="container mt-6">
-    <h2 class="text-3xl font-bold underline">Welcome to {{title!}}</h2>
-    <ul>
-        @for (product of products; track product.id) {
-        <li>{{product.id}}-{{ product.name }} - {{ product.price }}</li>
-        }
-    </ul>
+    <h2 class="text-3xl font-bold underline"></h2>
+    <app-shop></app-shop>
 </div>
