--- a/Client/src/styles.scss
+++ b/Client/src/styles.scss
@@ -8,3 +8,7 @@
   @include mat.badge-overrides((background-color: blue,
     ));
 }
+
+.match-input-height {
+  height: var(--mat-form-field-container-height) !important;
+}
