--- a/Client/src/styles.scss
+++ b/Client/src/styles.scss
@@ -6,7 +6,7 @@
       outlined-container-shape:'6px',
     ));
   @include mat.badge-overrides((background-color: blue,
-    )); 
+    ));
 }
 
 .match-input-height {
@@ -15,4 +15,16 @@
 
 .mdc-notched-outline__notch {
   border-right-style: none !important;
+}
+
+.snackbar-error {
+  @include mat.snack-bar-overrides((button-color: white,
+      container-color: red,
+      supporting-text-color:white));
+}
+
+.snackbar-success {
+  @include mat.snack-bar-overrides((button-color: white,
+      container-color: green,
+      supporting-text-color:white));
 }
