--- a/Client/src/app/features/home/home.html
+++ b/Client/src/app/features/home/home.html
@@ -8,7 +8,7 @@
             </h1>
             <button
                 class="bg-linear-to-r from-blue-600 to-cyan-500 font-semibold text-2xl text-white rounded-2xl px-8 py-4 border-2 border-transparent mt-7"
-                routerLink="/shop">Go
+                routerLink="/shop" mat-flat-button>Go
                 to shop</button>
         </div>
     </div>
